--- a/GEI797Labo/GEI797Labo.csproj
+++ b/GEI797Labo/GEI797Labo.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controller.cs" />
     <Compile Include="GameEngine.cs" />
     <Compile Include="GameForm.cs">
       <SubType>Form</SubType>
@@ -57,6 +58,7 @@
     <Compile Include="Models\Image2D.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Sprite.cs" />
     <Compile Include="TileManager.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
