--- a/GEI797Labo/GEI797Labo.csproj
+++ b/GEI797Labo/GEI797Labo.csproj
@@ -46,23 +46,23 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Controller.cs" />
+    <Compile Include="Controllers\Controller.cs" />
     <Compile Include="Controllers\IController.cs" />
     <Compile Include="GameEngine.cs" />
-    <Compile Include="GameForm.cs">
+    <Compile Include="Views\GameForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="GameForm.Designer.cs">
+    <Compile Include="Views\GameForm.Designer.cs">
       <DependentUpon>GameForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="GameView.cs" />
+    <Compile Include="Views\GameView.cs" />
     <Compile Include="Models\GameModel.cs" />
     <Compile Include="Models\Image2D.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Sprite.cs" />
+    <Compile Include="Models\Sprite.cs" />
     <Compile Include="TileManager.cs" />
-    <EmbeddedResource Include="GameForm.resx">
+    <EmbeddedResource Include="Views\GameForm.resx">
       <DependentUpon>GameForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
@@ -91,8 +91,6 @@
   <ItemGroup>
     <None Include="Resources\TilesSheet.png" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Views\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
