--- a/GEI797Labo/GEI797.csproj
+++ b/GEI797Labo/GEI797.csproj
@@ -49,6 +49,13 @@
     <Compile Include="Controllers\Controller.cs" />
     <Compile Include="Controllers\IController.cs" />
     <Compile Include="Controllers\GameEngine.cs" />
+    <Compile Include="Controllers\States\IState.cs" />
+    <Compile Include="Controllers\States\PausedState.cs" />
+    <Compile Include="Controllers\States\PlayState.cs" />
+    <Compile Include="Controllers\States\TransitionState.cs" />
+    <Compile Include="Models\Commands\IGameCommand.cs" />
+    <Compile Include="Models\Commands\RedoCommand.cs" />
+    <Compile Include="Models\Commands\UndoCommand.cs" />
     <Compile Include="Views\GameForm.cs">
       <SubType>Form</SubType>
     </Compile>
