--- a/GEI797Labo/GEI797.csproj
+++ b/GEI797Labo/GEI797.csproj
@@ -54,6 +54,7 @@
     <Compile Include="Controllers\States\PlayState.cs" />
     <Compile Include="Controllers\States\TransitionState.cs" />
     <Compile Include="Models\Commands\IGameCommand.cs" />
+    <Compile Include="Models\Commands\MoveCommand.cs" />
     <Compile Include="Models\Commands\RedoCommand.cs" />
     <Compile Include="Models\Commands\UndoCommand.cs" />
     <Compile Include="Views\GameForm.cs">
