Placed brick, left and top margins in sprite. Added Observer

--- a/GEI797Labo/GEI797.csproj
+++ b/GEI797Labo/GEI797.csproj
@@ -57,6 +57,8 @@
     <Compile Include="Models\Commands\MoveCommand.cs" />
     <Compile Include="Models\Commands\RedoCommand.cs" />
     <Compile Include="Models\Commands\UndoCommand.cs" />
+    <Compile Include="Observer\IResizeEventPublisher.cs" />
+    <Compile Include="Observer\IResizeEventSubscriber.cs" />
     <Compile Include="Views\GameForm.cs">
       <SubType>Form</SubType>
     </Compile>
