Implemented Action History with UNdo and Redo

--- a/GEI797Labo/GEI797.csproj
+++ b/GEI797Labo/GEI797.csproj
@@ -55,6 +55,7 @@
     <Compile Include="Controllers\States\TransitionState.cs" />
     <Compile Include="Models\Commands\IGameCommand.cs" />
     <Compile Include="Models\Commands\MoveCommand.cs" />
+    <Compile Include="Models\Commands\StartGameCommand.cs" />
     <Compile Include="Observer\IResizeEventPublisher.cs" />
     <Compile Include="Observer\IResizeEventSubscriber.cs" />
     <Compile Include="Views\GameForm.cs">
