--- a/GEI797Labo/GEI797.csproj
+++ b/GEI797Labo/GEI797.csproj
@@ -52,7 +52,7 @@
     <Compile Include="Controllers\States\IState.cs" />
     <Compile Include="Controllers\States\PausedState.cs" />
     <Compile Include="Controllers\States\PlayState.cs" />
-    <Compile Include="Controllers\States\TransitionState.cs" />
+    <Compile Include="Controllers\States\ResumeState.cs" />
     <Compile Include="Models\Commands\IGameCommand.cs" />
     <Compile Include="Models\Commands\MoveCommand.cs" />
     <Compile Include="Models\Commands\StartGameCommand.cs" />
