renemed everything (a lot)

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
-GEI797Labo/bin/*
-GEI797Labo/obj/*
-Tests/bin/*
-Tests/obj/*
+Explorus-E/bin/*
+Explorus-E/obj/*
+Explorus-E_Tests/bin/*
+Explorus-E_Tests/obj/*
 TestsResults/*
 .vs
