--- a/Explorus-E/Explorus-E.csproj
+++ b/Explorus-E/Explorus-E.csproj
@@ -48,6 +48,7 @@
   <ItemGroup>
     <Compile Include="Constants\Constants.cs" />
     <Compile Include="Constants\Enums.cs" />
+    <Compile Include="Constants\Structs.cs" />
     <Compile Include="Controllers\Controller.cs" />
     <Compile Include="Controllers\IController.cs" />
     <Compile Include="Controllers\GameEngine.cs" />
