--- a/Explorus-E/Explorus-E.csproj
+++ b/Explorus-E/Explorus-E.csproj
@@ -61,6 +61,12 @@
     <Compile Include="Models\Commands\IGameCommand.cs" />
     <Compile Include="Models\Commands\MoveCommand.cs" />
     <Compile Include="Models\Commands\StartGameCommand.cs" />
+    <Compile Include="Models\Sprites\BubbleSprite.cs" />
+    <Compile Include="Models\Sprites\GemSprite.cs" />
+    <Compile Include="Models\Sprites\PlayerSprite.cs" />
+    <Compile Include="Models\Sprites\SlimeTypeSprite.cs" />
+    <Compile Include="Models\Sprites\Sprite.cs" />
+    <Compile Include="Models\Sprites\ToxicSprite.cs" />
     <Compile Include="Observer\IResizeEventPublisher.cs" />
     <Compile Include="Observer\IResizeEventSubscriber.cs" />
     <Compile Include="Threads\PhysicsThread.cs" />
@@ -77,7 +83,6 @@
     <Compile Include="Models\Image2D.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Models\Sprite.cs" />
     <Compile Include="Models\TileManager.cs" />
     <EmbeddedResource Include="Views\GameForm.resx">
       <DependentUpon>GameForm.cs</DependentUpon>
