modified/adding renderable objects started to implement new render logic

--- a/Explorus-E/Explorus-E.csproj
+++ b/Explorus-E/Explorus-E.csproj
@@ -67,8 +67,10 @@
     <Compile Include="Models\Sprites\SlimeTypeSprite.cs" />
     <Compile Include="Models\Sprites\Sprite.cs" />
     <Compile Include="Models\Sprites\ToxicSprite.cs" />
-	<Compile Include="Models\Renderable.cs" />
-	<Compile Include="Models\RenderList.cs" />
+    <Compile Include="Models\Renderable.cs" />
+    <Compile Include="Models\RenderList.cs" />
+    <Compile Include="Models\Sprites\Wall.cs" />
+    <Compile Include="Models\Text.cs" />
     <Compile Include="Observer\IResizeEventPublisher.cs" />
     <Compile Include="Observer\IResizeEventSubscriber.cs" />
     <Compile Include="Threads\PhysicsThread.cs" />
