--- a/Explorus-E/Explorus-E.csproj
+++ b/Explorus-E/Explorus-E.csproj
@@ -58,6 +58,7 @@
     <Compile Include="Controllers\States\PlayState.cs" />
     <Compile Include="Controllers\States\ResumeState.cs" />
     <Compile Include="Controllers\States\StopState.cs" />
+    <Compile Include="Models\Bar.cs" />
     <Compile Include="Models\Commands\IGameCommand.cs" />
     <Compile Include="Models\Commands\MoveCommand.cs" />
     <Compile Include="Models\Commands\StartGameCommand.cs" />
