Added Gem Counter going down when we undo pickup

--- a/Explorus-E/Explorus-E.csproj
+++ b/Explorus-E/Explorus-E.csproj
@@ -61,6 +61,7 @@
     <Compile Include="Models\Bar.cs" />
     <Compile Include="Models\Commands\BubbleCreateCommand.cs" />
     <Compile Include="Models\Commands\DestroySpriteCommand.cs" />
+    <Compile Include="Models\Commands\GemPickedUpCommand.cs" />
     <Compile Include="Models\Commands\IGameCommand.cs" />
     <Compile Include="Models\Commands\LoseLifeCommand.cs" />
     <Compile Include="Models\Commands\MoveCommand.cs" />
