--- a/Explorus-E/Explorus-E.csproj
+++ b/Explorus-E/Explorus-E.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Constants\Enums.cs" />
     <Compile Include="Constants\Structs.cs" />
     <Compile Include="Controllers\Controller.cs" />
+    <Compile Include="Controllers\IControllerMenu.cs" />
     <Compile Include="Controllers\IControllerModel.cs" />
     <Compile Include="Controllers\IControllerView.cs" />
     <Compile Include="Controllers\GameEngine.cs" />
@@ -68,6 +69,7 @@
     <Compile Include="Models\Commands\StartGameCommand.cs" />
     <Compile Include="Models\Commands\BubbleMoveCommand.cs" />
     <Compile Include="Models\Commands\ToxicMoveCommand.cs" />
+    <Compile Include="Models\PauseMenu.cs" />
     <Compile Include="Models\Sprites\BubbleSprite.cs" />
     <Compile Include="Models\Sprites\GemSprite.cs" />
     <Compile Include="Models\Sprites\MiniSlimeSprite.cs" />
