--- a/Explorus-E/Explorus-E.csproj
+++ b/Explorus-E/Explorus-E.csproj
@@ -77,12 +77,15 @@
     <Compile Include="Models\Sprites\Sprite.cs" />
     <Compile Include="Models\Sprites\ToxicSprite.cs" />
     <Compile Include="Models\Renderable.cs" />
-    <Compile Include="Models\RenderList.cs" />
+    <Compile Include="Threads\IRenderListReader.cs" />
+    <Compile Include="Threads\IRenderQueueAsker.cs" />
+    <Compile Include="Threads\RenderList.cs" />
     <Compile Include="Models\Sprites\Wall.cs" />
     <Compile Include="Models\Text.cs" />
     <Compile Include="Observer\IResizeEventPublisher.cs" />
     <Compile Include="Observer\IResizeEventSubscriber.cs" />
     <Compile Include="Threads\PhysicsThread.cs" />
+    <Compile Include="Threads\RenderQueue.cs" />
     <Compile Include="Threads\RenderThread.cs" />
     <Compile Include="Views\GameForm.cs">
       <SubType>Form</SubType>
