--- a/Explorus-E/Explorus-E.csproj
+++ b/Explorus-E/Explorus-E.csproj
@@ -55,6 +55,7 @@
     <Compile Include="Controllers\IControllerView.cs" />
     <Compile Include="Controllers\GameEngine.cs" />
     <Compile Include="Controllers\States\IState.cs" />
+    <Compile Include="Controllers\States\MenuState.cs" />
     <Compile Include="Controllers\States\PausedState.cs" />
     <Compile Include="Controllers\States\PlayState.cs" />
     <Compile Include="Controllers\States\ResumeState.cs" />
