states menu and help ok, navigation inside menu ok, incrementation of volume NUMBER ok, exit game ok

--- a/Explorus-E/Explorus-E.csproj
+++ b/Explorus-E/Explorus-E.csproj
@@ -54,6 +54,7 @@
     <Compile Include="Controllers\IControllerModel.cs" />
     <Compile Include="Controllers\IControllerView.cs" />
     <Compile Include="Controllers\GameEngine.cs" />
+    <Compile Include="Controllers\States\HelpState.cs" />
     <Compile Include="Controllers\States\IState.cs" />
     <Compile Include="Controllers\States\MenuState.cs" />
     <Compile Include="Controllers\States\PausedState.cs" />
